--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chalk": "^4.1.2",
     "chance": "^1.1.8",
     "config": "^3.3.8",
+    "date-fns": "^2.29.3",
     "discord-api-types": "^0.37.10",
     "discord.js": "^14.3.0",
     "dotenv": "^16.0.2",
